--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@
     border-radius: 50px;
     background: transparent;
     border: 2px solid #fff;
+    color: white;
     transition: all 0.3s ease;
 
     font-size: 20px;
@@ -143,6 +144,7 @@
     transition: all 0.3s ease;
     position: absolute;
     margin-left: -100px;
+    color: white;
     top: 70%;
 
     font-size: 20px;
@@ -155,4 +157,43 @@
 .play-again:hover {
     background: #fff;
     color: #000;
+}
+
+@media screen and (max-width: 768px) {
+    .left {
+        float: top;
+        width: 100%;
+    }
+    .right {
+        float: bottom;
+        width: 100%;
+    }
+
+    .vs-circle {
+        width: 50px;
+        height: 50px;
+        font-size: 20px;
+    }
+
+    .vs-text {
+        font-size: 20px;
+        width: 100%;
+        text-align: center;
+    }
+
+    .start {
+        width: 90%;
+        margin-left: 5%;
+        font-size: 10px;
+    }
+
+    .play-again {
+        left: calc(50%);
+        top: 80%;
+    }
+
+    .go-text {
+        font-size: x-large;
+        top: 15%;
+    }
 }
