--- a/src/components/videoShowcase/VideoShowcase.css
+++ b/src/components/videoShowcase/VideoShowcase.css
@@ -1,71 +1,124 @@
 .thumbnail {
-	height: 90vh;
-	object-fit: cover;
-	width: 100%;
-	overflow: hidden;
-	z-index: -1;
-	/* transition: all 1s ease; */
+    height: 90vh;
+    object-fit: cover;
+    width: 100%;
+    overflow: hidden;
+    z-index: -1;
+    /* transition: all 1s ease; */
 }
 
 .overlay {
-	position: absolute;
-	top: 0;
-	width: 50%;
-	height: 94vh;
-	background: linear-gradient(
-		180deg,
-		rgba(0, 0, 0, 0.6) 0%,
-		rgba(0, 0, 0, 0.75) 100%
-	);
-	z-index: 1;
+    position: absolute;
+    width: 50%;
+    height: 94vh;
+    background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.6) 0%,
+        rgba(0, 0, 0, 0.75) 100%
+    );
+    top: 0px;
+    z-index: 1;
 }
 
 .title {
-	position: fixed;
-	width: 30%;
-	margin-left: 10%;
-	height: auto;
-	line-height: 2.25rem;
-	top: 40%;
-	text-align: center;
-	/* background-color: red; */
-	/* transform: translate(-50%, -50%); */
-	color: #fff;
-	font-size: 1.5rem;
-	font-weight: 600;
-	/* text-transform: uppercase; */
-	letter-spacing: 0.2rem;
+    position: fixed;
+    width: 30%;
+    margin-left: 10%;
+    height: auto;
+    line-height: 2.25rem;
+    top: 40%;
+    text-align: center;
+    /* background-color: red; */
+    /* transform: translate(-50%, -50%); */
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 600;
+    /* text-transform: uppercase; */
+    letter-spacing: 0.2rem;
 
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-	z-index: 2;
-	/* transition: all 0.3s ease; */
-	height: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    z-index: 2;
+    /* transition: all 0.3s ease; */
+    height: 0px;
 }
 
 .has-text {
-	font-size: 1rem;
-	font-weight: 600;
-	/* transition: all 1s ease; */
+    font-size: 1rem;
+    font-weight: 600;
+    /* transition: all 1s ease; */
 }
 
 .viewCount {
-	margin-top: 20px;
-	font-size: 3rem;
-	font-weight: 700;
-	color: yellow;
-	/* transition: all 0.3s ease; */
+    margin-top: 20px;
+    font-size: 3rem;
+    font-weight: 700;
+    color: yellow;
+    /* transition: all 0.3s ease; */
 }
 
 .option {
-	width: 60%;
-	margin-top: 20px;
-	border-radius: 50px;
-	background: transparent;
-	border: 2px solid #fff;
-	transition: all 0.3s ease;
+    width: 60%;
+    margin-top: 20px;
+    border-radius: 50px;
+    background: transparent;
+    border: 2px solid #fff;
+    transition: all 0.3s ease;
+    color: white;
 }
 
 .option:hover {
-	background: #fff;
-	color: #000;
+    background: #fff;
+    color: #000;
+}
+
+@media screen and (max-width: 768px) {
+    .thumbnail {
+        height: 45vh;
+        margin-top: 0px;
+    }
+
+    .overlay {
+        width: 100%;
+        height: 94vh;
+        opacity: 0.5;
+        top: 0;
+    }
+
+    .title {
+        width: 80%;
+        margin-left: 10%;
+        font-size: 1rem;
+        line-height: 1.5rem;
+        line-height: 2rem;
+    }
+
+    .title-left {
+        top: 20vh;
+    }
+
+    .title-right {
+        top: 60vh;
+    }
+
+    .has-text {
+        font-size: 0.8rem;
+    }
+
+    .viewCount {
+        font-size: 2rem;
+    }
+
+    .option {
+        width: 80%;
+    }
+
+    .go-title {
+        top: 60%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .thumbnail {
+        top: 0;
+    }
 }
