--- a/src/components/videoShowcase/VideoShowcase.css
+++ b/src/components/videoShowcase/VideoShowcase.css
@@ -40,6 +40,8 @@
     z-index: 2;
     /* transition: all 0.3s ease; */
     height: 0px;
+
+    transition: all ease-in-out 0.2s;
 }
 
 .has-text {
